# inkscape-master

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README.md  TRANSLATORS  _clang-format  config.h.cmake  generate_busbars.py  generate_components.py  generate_mv_sld.py  generate_qpac.py  org.inkscape.Inkscape.appdata.xml.in  org.inkscape.Inkview.desktop.template
share/: CMakeLists.txt
share/application-registry/: inkscape.applications
share/attributes/: CMakeLists.txt
share/branding/: CMakeLists.txt
share/examples/: CMakeLists.txt
share/filters/: CMakeLists.txt
share/fonts/: CMakeLists.txt
share/icons/: CMakeLists.txt
share/keys/: adobe-illustrator-cc2024.xml  adobe-illustrator-cs2.xml  inkscape.xml  macromedia-freehand-mx.xml  right-handed-illustration.xml  xara.xml
share/paint/: CMakeLists.txt
share/palettes/: CMakeLists.txt  elementary.gpl
share/screens/: CMakeLists.txt
share/symbols/: CMakeLists.txt
share/templates/: CMakeLists.txt
share/tutorials/: CMakeLists.txt
share/ui/: CMakeLists.txt  Minwaita-Inkscape.css  align-and-distribute.ui  attribute-edit-component.glade  canvas-notice.glade  character-viewer.ui  color-page.glade  color-palette.glade  command-palette-main.glade  command-palette-operation.glade  completion-box.glade  dash-selector.ui  dialog-crash.glade  dialog-css.glade  dialog-document-resources.glade  dialog-export-prefs.glade  dialog-export.glade  dialog-extensions.glade  dialog-filter-editor.glade  dialog-font-collections.glade  dialog-livepatheffect-item.glade  dialog-livepatheffect.glade  dialog-measure-tool-settings.ui  dialog-objects.glade  dialog-save-template.glade  dialog-spellcheck.ui  dialog-swatches.glade  dialog-symbols.glade  dialog-text-edit.glade  dialog-trace.glade  dialog-xml.glade  display-popup.glade  document-tab-preview.ui  document-tab.ui  extension-pdfinput.glade  font-list.glade  gradient-edit.glade  handle-theme-azure.css  handle-theme-crimson.css  handle-theme-custom.css  (+59 more)
src/: CMakeLists.txt  attribute-rel-util.cpp  attributes.cpp  attributes.h  auto-save.cpp  axis-manip.cpp  axis-manip.h  composite-undo-stack-observer.cpp  composite-undo-stack-observer.h  conn-avoid-ref.cpp  context-fns.cpp  css-chemistry.cpp  css-chemistry.h  desktop-events.cpp  desktop-style.cpp  desktop-style.h  desktop.cpp  desktop.h  distribution-snapper.cpp  document-undo.cpp  document-undo.h  document-update.cpp  document-update.h  document.cpp  document.h  doxygen-main.dox  enums.h  event-log.cpp  event-log.h  file.cpp  file.h  filter-chemistry.cpp  filter-chemistry.h  filter-enums.cpp  gradient-chemistry.cpp  gradient-chemistry.h  gradient-drag.cpp  gradient-drag.h  grid-snapper.cpp  guide-snapper.cpp  (+68 more)
src/actions/: CMakeLists.txt  actions-base.cpp  actions-canvas-mode.cpp  actions-canvas-mode.h  actions-canvas-snapping.cpp  actions-canvas-snapping.h  actions-canvas-transform.cpp  actions-canvas-transform.h  actions-dialogs.cpp  actions-edit-document.cpp  actions-edit-window.cpp  actions-edit.cpp  actions-effect-data.cpp  actions-effect.cpp  actions-effect.h  actions-element-a.cpp  actions-element-image.cpp  actions-extra-data.cpp  actions-extra-data.h  actions-file-window.cpp  actions-file.cpp  actions-help-url.cpp  actions-helper-gui.cpp  actions-helper-gui.h  actions-helper.cpp  actions-helper.h  actions-hide-lock.cpp  actions-layer.cpp  actions-node-align.cpp  actions-object-align.cpp  actions-object.cpp  actions-output.cpp  actions-pages.cpp  actions-paths.cpp  actions-selection-object.cpp  actions-selection-window.cpp  actions-selection.cpp  actions-svg-processing.cpp  actions-text.cpp  actions-tools.cpp  (+8 more)
src/async/: CMakeLists.txt  async.cpp  async.h  background-task.h  operation-stream.h
src/colors/: CMakeLists.txt  CMakeUnit.txt  color-set.cpp  color-set.h  color.cpp  color.h  document-cms.cpp  document-cms.h  dragndrop.cpp  dragndrop.h  manager.cpp  manager.h  parser.cpp  parser.h  printer.cpp  printer.h  utils.cpp  utils.h  xml-color.cpp  xml-color.h
src/css/: CMakeLists.txt  syntactic-decomposition.cpp  syntactic-decomposition.h
src/debug/: CMakeLists.txt  console-output-undo-observer.cpp  console-output-undo-observer.h
src/display/: CMakeLists.txt  cairo-templates.h  cairo-utils.cpp  cairo-utils.h  curve.cpp  curve.h  dispatch-pool.cpp  dispatch-pool.h  drawing-context.cpp  drawing-context.h  drawing-image.cpp  drawing-item.cpp  drawing-item.h  drawing-paintserver.cpp  drawing-paintserver.h  drawing-pattern.cpp  drawing-shape.cpp  drawing-shape.h  drawing-surface.h  drawing-text.cpp  drawing-text.h  drawing.cpp  drawing.h  nr-filter-colormatrix.cpp  nr-filter-colormatrix.h  nr-filter-diffuselighting.cpp  nr-filter-diffuselighting.h  nr-filter-dropshadow.cpp  nr-filter-dropshadow.h  nr-filter-flood.cpp  nr-filter-flood.h  nr-filter-gaussian.cpp  nr-filter-gaussian.h  nr-filter-morphology.cpp  nr-filter-primitive.cpp  nr-filter-primitive.h  nr-filter-slot.cpp  nr-filter-slot.h  nr-filter-specularlighting.cpp  nr-filter-specularlighting.h  (+11 more)
src/extension/: CMakeLists.txt  db.cpp  db.h  dependency.cpp  effect.cpp  effect.h  execution-env.cpp  execution-env.h  extension.cpp  extension.h  init.cpp  init.h  input.cpp  input.h  output.cpp  output.h  patheffect.cpp  patheffect.h  print.cpp  print.h  processing-action.cpp  processing-action.h  system.cpp  system.h  template.cpp  template.h
src/helper/: CMakeLists.txt  geom-curves.h  geom-pathstroke.cpp  geom-pathstroke.h  geom-pathvector_nodesatellites.cpp  geom-pathvector_nodesatellites.h  geom.cpp  geom.h  gettext.cpp  mathfns.h  pixbuf-ops.cpp  pixbuf-ops.h  png-write.cpp  png-write.h  stock-items.cpp  stock-items.h
src/include/: CMakeLists.txt
src/inkgc/: CMakeLists.txt  gc.cpp
src/io/: CMakeLists.txt  README  file-export-cmd.cpp  file-export-cmd.h  file.cpp  file.h  fix-broken-links.cpp  fix-broken-links.h  (+8 more)
testfiles/: CMakeLists.txt  compare-paths-test.h  doc-per-case-test.cpp  doc-per-case-test.h  inkscape-test.cpp  lpespaths-test.h  store-integrity-test.h  test-with-svg-object-pairs.cpp
(+1470 files in other folders)
